// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderQuizInactivityAlertEmail > with no quiz ever taken matches the agreed golden layout 1`] = `
"<!DOCTYPE html>
<html lang="ko">
<body style="margin:0;padding:0;background:#f1efe8;font-family:-apple-system,'Segoe UI',sans-serif;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f1efe8;padding:24px 0;">
<tr><td align="center">
<table role="presentation" width="600" cellpadding="0" cellspacing="0" style="background:#ffffff;border-radius:12px;overflow:hidden;">
<tr><td style="background:#0b0b0b;color:#ffffff;padding:20px 24px;font-size:18px;font-weight:600;">KPI 역량 진단 퀴즈 알림</td></tr>
<tr><td style="padding:16px 24px 0;font-size:12px;color:#898781;">생성일: 2026-08-14</td></tr>
<tr><td style="padding:20px 24px 0;"><div style="background:#CECBF6;color:#534AB7;border-radius:10px;padding:18px 20px;font-size:16px;font-weight:700;">🧠 아직 역량 진단 퀴즈를 한 번도 안 해봤어요.</div></td></tr>
<tr><td style="padding:0 24px 24px;"><h2 style="font-size:14px;color:#0b0b0b;margin:0 0 12px;">이번 주 진단해볼까요?</h2><div style="background:#f1efe8;border-left:4px solid #5DCAA5;border-radius:6px;padding:12px 16px;margin-bottom:10px;font-size:13px;color:#0b0b0b;">역량 진단 퀴즈로 준비 상태를 점검해보세요. 관리 화면에서 바로 시작할 수 있어요.</div></td></tr>
<tr><td align="center" style="padding:8px 24px 28px;"><a href="https://dashboard.example/kpi" style="display:inline-block;background:#5DCAA5;color:#ffffff;padding:12px 24px;border-radius:8px;text-decoration:none;font-weight:600;font-size:13px;">관리 화면에서 자세히 보기</a></td></tr>
</table>
</td></tr>
</table>
</body>
</html>"
`;

exports[`renderQuizInactivityAlertEmail > with quiz history matches the agreed golden layout 1`] = `
"<!DOCTYPE html>
<html lang="ko">
<body style="margin:0;padding:0;background:#f1efe8;font-family:-apple-system,'Segoe UI',sans-serif;">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f1efe8;padding:24px 0;">
<tr><td align="center">
<table role="presentation" width="600" cellpadding="0" cellspacing="0" style="background:#ffffff;border-radius:12px;overflow:hidden;">
<tr><td style="background:#0b0b0b;color:#ffffff;padding:20px 24px;font-size:18px;font-weight:600;">KPI 역량 진단 퀴즈 알림</td></tr>
<tr><td style="padding:16px 24px 0;font-size:12px;color:#898781;">생성일: 2026-08-14</td></tr>
<tr><td style="padding:20px 24px 0;"><div style="background:#CECBF6;color:#534AB7;border-radius:10px;padding:18px 20px;font-size:16px;font-weight:700;">🧠 역량 진단 퀴즈를 9일째 쉬고 있어요.</div></td></tr>
<tr><td style="padding:0 24px 24px;"><h2 style="font-size:14px;color:#0b0b0b;margin:0 0 12px;">이번 주 진단해볼까요?</h2><div style="background:#f1efe8;border-left:4px solid #5DCAA5;border-radius:6px;padding:12px 16px;margin-bottom:10px;font-size:13px;color:#0b0b0b;">역량 진단 퀴즈로 준비 상태를 점검해보세요. 관리 화면에서 바로 시작할 수 있어요.</div></td></tr>
<tr><td align="center" style="padding:8px 24px 28px;"><a href="https://dashboard.example/kpi" style="display:inline-block;background:#5DCAA5;color:#ffffff;padding:12px 24px;border-radius:8px;text-decoration:none;font-weight:600;font-size:13px;">관리 화면에서 자세히 보기</a></td></tr>
</table>
</td></tr>
</table>
</body>
</html>"
`;
